--- a/folio_digital_jhulearning.html
+++ b/folio_digital_jhulearning.html
@@ -150,11 +150,11 @@
                         </div>
                       </div>
                       <div class="col-md-6 col-sm-12 clearfix">
-                        <div class="content  bg-gray"> <!--border mrg-horizon-15 mrg-top-30 mrg-btm-30-->
-                            <h2 style="">Goals</h2> <!--margin-top:-10px;-->
+                        <div class="content "> <!--border mrg-horizon-15 mrg-top-30 mrg-btm-30-->
+                            <h2 class="heading-left">Goals</h2> <!--margin-top:-10px;-->
                             <!-- <p class="sub-heading-left mrg-top-15">Duis in nisl vel tortor ornare dignissim</p> -->
                             <!-- <p class="mrg-top-30"></p> -->
-                            <ul class="list icon-check mrg-top-15" style="margin-bottom:20px;">
+                            <ul class="list icon-check mrg-top-50" style="margin-bottom:20px;">
                               <li>Develop an interface to aid in learning, incorporating strategies of inquiry-based learning, synthesizing, and spaced-retrieval prompting, in targeting the retention and storage of information from short-term to long-term memory</li>
                               <li>Devise pertinent concept-testing research experiment which aims to study how students interact with various material, identify and reason through questions, and adopt strategies for learning</li>
                             </ul>
@@ -390,14 +390,14 @@
       </a>
     </div>
     <div class="folio-item" style="position: absolute; left: 760px; top: 0px;">
-      <a href="folio_digital_jhulearning.html" class="folio-style-1 ">
+      <a href="folio_digital_jhudegreeaudit.html" class="folio-style-1 ">
         <div class="folio-image">
           <img src="images/Alvina/JHU/square.png" alt="">
           <div class="overlay">
             <div class="overlay-caption">
               <div class="overlay-content">
                 <div class="folio-info">
-                  <h4 class="folio-tittle">Perceived Cognition & Tools for Synthesis</h4>
+                  <h4 class="folio-tittle">JHU Degree Audit</h4>
                   <!-- <p class="droid-serif-italic">Web, Branding</p> -->
                 </div>
               </div>
