--- a/folio_digital_oracle.html
+++ b/folio_digital_oracle.html
@@ -122,7 +122,7 @@
         </section> -->
 
 
-    <section class="header header-md parallax parallax-overlay-dark no-border" style="background-image:url(images/Alvina/Oracle/">
+    <section class="header header-md parallax parallax-overlay-dark no-border" style="background-image:url(images/Alvina/paint06.jpg">
             <div class="container text-center">
                 <div class="text-center pdd-btm-30 mrg-top-30">
                     <h4 class="hero-heading inline-block border border-light thick-md pdd-vertical-30 pdd-horizon-30"><b>The Oracle</b></h4>
@@ -138,7 +138,7 @@
 
 <section id="portfolio" class="section" style="margin-top:-90px;">
   <div class="text-center">
-    <h1 class="heading">Work</h1>
+    <h1 class="" style="text-align:center">Work</h1>
   </div>
     <div class="container">
       <div class="col-md-9 col-md-offset-3">
@@ -218,7 +218,7 @@
   </section>
 
 <div class="col-sm-12 mrg-top-70 mrg-btm-20">
-  <h2 class="heading mrg-btm-70">Related Work</h2>
+  <h2 class="mrg-btm-70" style="text-align:center">Related Work</h2>
   <div class="portfolio portfolio-isotope col-4 gutter" style="position: relative; height: 290px;">
     <!-- Images -->
     <div class="folio-item" style="position: absolute; left: 380px; top: 0px;">
