--- a/folio_digital_tedxjhu.html
+++ b/folio_digital_tedxjhu.html
@@ -311,7 +311,7 @@
     <!-- Portfolio -->
     <section id="portfolio" class="section" style="margin-top:-90px;">
       <div class="text-center">
-        <h1 class="heading">Archive</h1>
+        <h1 class="" style="text-align:center">Archive</h1>
       </div>
       <!-- Filter -->
       <div class="container">
@@ -1174,7 +1174,7 @@
 
 
 <div class="col-sm-12 mrg-top-70 mrg-btm-20">
-  <h2 class="heading mrg-btm-70">Related Work</h2>
+  <h2 class="mrg-btm-70" style="text-align:center">Related Work</h2>
   <div class="portfolio portfolio-isotope col-4 gutter" style="position: relative; height: 290px;">
     <!-- Images -->
     <div class="folio-item" style="position: absolute; left: 380px; top: 0px;">
