--- a/folio_finearts_western.html
+++ b/folio_finearts_western.html
@@ -195,8 +195,8 @@
 
 <br><br><br><br>
 
-<h2 class="heading mrg-top-70 mrg-btm-20">Related Work</h2>
-<div class="col-sm-12 col-sm-offset-3 mrg-top-30 mrg-btm-20">
+<h2 class=" mrg-top-70" style="text-align:center;">Related Work</h2>
+<div class="col-sm-12 col-sm-offset-3 mrg-top-50 mrg-btm-20">
   <div class="portfolio portfolio-isotope col-4 gutter" style="position: relative; height: 290px;">
     <!-- Images -->
     <div class="folio-item" style="position: absolute; left: 0px; top: 0px;">
