--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
                 <!-- /folio-item -->
 
                 <div class="folio-item web video">
+                  <a href="folio_digital_gt.html">
                     <div class="folio-style-1">
                         <div class="folio-image">
                             <img src="images/Alvina/GT/GT_Start-78.png" alt="">
@@ -237,11 +238,12 @@
                             <!-- /overlay -->
                         </div>
                         <!-- folio-image -->
-                    </div>
+                    </div></a>
                     <!-- /folio-style -->
                 </div>
 
                 <div class="folio-item web">
+                  <a href="folio_digital_hac.html">
                         <div class="folio-image">
                           <div class="folio-style-1 mfp-image">
                             <img src="images/Alvina/HAC/HAC-13.png" alt="">
@@ -266,11 +268,12 @@
                             <!-- /overlay -->
                         </div>
                         <!-- folio-image -->
-                </div>
+                </div></a>
                 <!-- /folio-item -->
               </div>
 
                 <div class="folio-item web">
+                  <a href="folio_digital_jhulearning.html">
                     <div class="folio-style-1 mfp-iframe">
                         <div class="folio-image">
                             <img src="images/Alvina/IR/1.png" alt="">
@@ -295,12 +298,13 @@
                             <!-- /overlay -->
                         </div>
                         <!-- folio-image -->
-                    </div>
+                    </div></a>
                     <!-- /folio-style -->
                 </div>
                 <!-- /folio-item -->
 
                 <div class="folio-item web">
+                  <a href="folio_digital_jhudegreeaudit.html">
                     <div class="folio-style-1 mfp-iframe">
                         <div class="folio-image">
                             <img src="images/Alvina/JHU/1-Full.png" alt="">
@@ -325,12 +329,13 @@
                             <!-- /overlay -->
                         </div>
                         <!-- folio-image -->
-                    </div>
+                    </div></a>
                     <!-- /folio-style -->
                 </div>
                 <!-- /folio-item -->
 
                 <div class="folio-item web video">
+                  <a href="folio_digital_tedxjhu.html">
                     <div class="folio-style-1 mfp-iframe">
                         <div class="folio-image">
                             <img src="images/Alvina/TEDxJHU/tedx7.jpg" alt="">
@@ -356,12 +361,13 @@
                             <!-- /overlay -->
                         </div>
                         <!-- folio-image -->
-                    </div>
+                    </div></a>
                     <!-- /folio-style -->
                 </div>
                 <!-- /folio-item -->
 
                 <div class="folio-item web">
+                  <a href="folio_digital_ssm.html">
                     <div class="folio-style-1 mfp-iframe">
                         <div class="folio-image">
                             <img src="images/Alvina/SSM/Mockup_SSMFlyer.png" alt="">
@@ -386,12 +392,13 @@
                             <!-- /overlay -->
                         </div>
                         <!-- folio-image -->
-                    </div>
+                    </div></a>
                     <!-- /folio-style -->
                 </div>
                 <!-- /folio-item -->
 
                 <div class="folio-item web">
+                  <a href="folio_digital_oracle.html">
                     <div class="folio-style-1 mfp-image">
                         <div class="folio-image">
                             <img src="images/Alvina/Oracle/frontpageheart.png" alt="">
@@ -416,12 +423,13 @@
                             <!-- /overlay -->
                         </div>
                         <!-- folio-image -->
-                    </div>
+                    </div></a>
                     <!-- /folio-style -->
                 </div>
                 <!-- /folio-item -->
 
                 <div class="folio-item graphic">
+                  <a href="folio_finearts_western.html">
                     <div class="folio-style-1 mfp-image">
                         <div class="folio-image">
                             <img src="images/Alvina/Western/IMG_8410-cropped_2077.jpg" alt="">
@@ -446,12 +454,13 @@
                             <!-- /overlay -->
                         </div>
                         <!-- folio-image -->
-                    </div>
+                    </div></a>
                     <!-- /folio-style -->
                 </div>
                 <!-- /folio-item -->
 
                 <div class="folio-item graphic">
+                  <a href="folio_finearts_cp.html">
                     <div class="folio-style-1 mfp-image">
                         <div class="folio-image">
                             <img src="images/Alvina/Chinese/200flower_o.jpg" alt="">
@@ -476,15 +485,16 @@
                             <!-- /overlay -->
                         </div>
                         <!-- folio-image -->
-                    </div>
+                    </div></a>
                     <!-- /folio-style -->
                 </div>
                 <!-- /folio-item -->
 
                 <div class="folio-item graphic">
+                  <a href="folio_finearts_cc.html">
                     <div class="folio-style-1 mfp-image">
                         <div class="folio-image">
-                            <img src="images/Alvina/Chinese/2011 - gold - calligraphy 1 cropped_o.jpg" alt="">
+                            <img src="images/Alvina/Chinese/clthumb.jpg" alt="">
                             <div class="overlay">
                                 <div class="overlay-caption">
                                     <div class="overlay-content">
@@ -506,7 +516,7 @@
                             <!-- /overlay -->
                         </div>
                         <!-- folio-image -->
-                    </div>
+                    </div></a>
                     <!-- /folio-style -->
                 </div>
                 <!-- /folio-item -->
@@ -541,7 +551,7 @@
                             <!-- <li><i class="ti-map"></i>1422 1st St. Santa Rosa,t CA 94559. USA</li>
                             <li><i class="ti-mobile"></i>+06 162 7509</li>
                             <li><i class="ti-email"></i><a href="mailto:your@email.com">your@email.com</a></li> -->
-                            <li><i class="ti-world"></i><a href="#">www.alvinay.com</a></li>
+                            <li><i class="ti-world"></i><a href="#">allytart.github.io</a></li>
                         </ul>
                     </div>
                     <!-- /contact-inform-widget -->
