--- a/folio_digital_fusiform.html
+++ b/folio_digital_fusiform.html
@@ -537,7 +537,7 @@
 </section> -->
 
   <div class="col-sm-12 mrg-top-70 mrg-btm-20">
-    <h2 class="heading mrg-btm-70">Related Work</h2>
+    <h2 class="mrg-btm-70" style="text-align:center;">Related Work</h2>
     <div class="portfolio portfolio-isotope col-4 gutter" style="position: relative; height: 290px;">
       <!-- Images -->
       <div class="folio-item" style="position: absolute; left: 0px; top: 0px;">
