--- a/folio_digital_hac.html
+++ b/folio_digital_hac.html
@@ -201,7 +201,7 @@
               </div> -->
         <!-- END IMAGE -->
 
-        <h2 class="heading mrg-top-70">Exhibition Set</h2>
+        <h2 class="mrg-top-70" style="text-align:center">Exhibition Set</h2>
         <p class="mrg-top-70 text-center">
 <div class="container mrg-top-50">
         <div class="portfolio portfolio-isotope col-4 gutter" style="position: relative; height: 362.188px;">
@@ -408,8 +408,8 @@
 </div>
 
 <div class="col-sm-12 mrg-top-70 mrg-btm-20">
-  <h2 class="heading mrg-btm-70">Related Work</h2>
-  <div class="portfolio portfolio-isotope col-4 gutter" style="position: relative; height: 290px;">
+  <h2 class="" style="text-align:center">Related Work</h2>
+  <div class="portfolio portfolio-isotope col-4 gutter mrg-top-70" style="position: relative; height: 290px;">
     <!-- Images -->
     <div class="folio-item" style="position: absolute; left: 380px; top: 0px;">
       <a href="folio_digital_gt.html" class="folio-style-1 ">
