Mobile/Desktop Hide

--- a/folio_digital_gt.html
+++ b/folio_digital_gt.html
@@ -141,7 +141,7 @@
   <section id="work-process" class="section">
       <div class="container">
           <!-- <p class="sub-heading"></p> -->
-          <h2 class="heading" style="margin-top:-50px;">Project Brief</h2>
+          <h2 class="" style="margin-top:-50px; text-align:center">Project Brief</h2>
           <p class="mrg-top-70 text-center">
               <!-- <br class="hide-mobile"> -->
               <p class="sub-heading-left">Background</p>
