--- a/folio_digital_jhudegreeaudit.html
+++ b/folio_digital_jhudegreeaudit.html
@@ -138,7 +138,7 @@
 
         <section id="about" class="no-border bg-white">
           <div class="container">
-            <h2 class="heading mrg-top-70">Background</h2>
+            <h2 class="mrg-top-70" style="text-align:center;">Background</h2>
             <p class="mrg-top-70 text-center">
               <!-- <br class="hide-mobile"> -->
               <p class="sub-heading-left">Purpose & Goal</p>
@@ -334,7 +334,7 @@
 
 
   <div class="col-sm-12 mrg-top-70 mrg-btm-20">
-    <h2 class="heading mrg-btm-70">Related Work</h2>
+    <h2 class=" mrg-btm-70" style="text-align:center;">Related Work</h2>
     <div class="portfolio portfolio-isotope col-4 gutter" style="position: relative; height: 290px;">
       <!-- Images -->
       <div class="folio-item" style="position: absolute; left: 0px; top: 0px;">
