--- a/folio_digital_jhulearning.html
+++ b/folio_digital_jhulearning.html
@@ -274,7 +274,7 @@
                             </div>
                       </section>
 
-                      <section id="team" class="bg-gray section-4 no-border">
+                      <section id="team" class="bg-gray section-4 no-border mobile-hide">
                         <div class="container">
                           <div class="row">
                             <div class="col-md-12">
@@ -335,7 +335,7 @@
                           </section>
 
 <div class="col-sm-12 mrg-top-70 mrg-btm-20">
-  <h2 class="heading mrg-btm-70">Related Work</h2>
+  <h2 class=" mrg-btm-70"  style="text-align:center;">Related Work</h2>
   <div class="portfolio portfolio-isotope col-4 gutter" style="position: relative; height: 290px;">
     <!-- Images -->
     <div class="folio-item" style="position: absolute; left: 0px; top: 0px;">
