--- a/folio_digital_tedxjhu.html
+++ b/folio_digital_tedxjhu.html
@@ -137,7 +137,7 @@
 
 
     <!-- Video Parallax -->
-    <section class="video-parallax no-border parallax-overlay-dark" style="height:700px;">
+    <section class="video-parallax no-border parallax-overlay-dark mobile-hide" style="height:700px;">
         <div class="video-player" data-property="{videoURL:'https://youtu.be/tQz4kZ_2wc0',containment:'.video-parallax',autoPlay:true, mute:true, loop:false, showControls:true, startAt:0, opacity:1}">Youtube video</div>
 
         <div class="container text-left mrg-btm-50" style="margin-left:20px;margin-top:12px;">
