--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
     <!-- <section class="header header-md parallax no-border" style="background-image:url(images/Alvina/02cover-01.png)">
         </section> -->
 
-    <!-- Portfolio -->
-    <section id="portfolio" class="section">
+    <!-- Portfolio Desktop-->
+    <section id="portfolio" class="section mobile-hide">
       <div class="container">
           <h2 class="heading">Portfolio</h2>
           <!-- <p class="sub-heading">Filter by Category</p> -->
@@ -527,6 +527,162 @@
         <!-- /container -->
     </section>
     <!-- /portfolio -->
+
+    <!-- Portfolio Mobile-->
+    <section id="portfolio" class="section desktop-hide">
+      <div class="container">
+          <h2 class="" style="text-align:center">Portfolio</h2>
+          <!-- <p class="sub-heading">Filter by Category</p> -->
+      </div>
+        <div class="container">
+            <div class="portfolio-filter-group folio-fillter-3 mrg-btm-50 mrg-vertical-30 text-center">
+                <a href="#" data-filter="*" class="iso-active iso-button ">All</a>
+                <a href="#" data-filter=".graphic" class="iso-button">Fine Arts</a>
+                <a href="#" data-filter=".web" class="iso-button">Digital</a>
+                <!-- <a href="#" data-filter=".branding" class="iso-button">Branding</a>
+                <a href="#" data-filter=".video" class="iso-button">Video</a> -->
+            </div>
+            <!-- portfolio-filter -->
+
+            <div class="portfolio portfolio-isotope masonry col-4 gutter">
+
+                <div class="folio-item web">
+                  <a href="folio_digital_fusiform.html">
+                    <div class="folio-style-1 mfp-image">
+                        <div class="folio-image">
+                            <img src="images/Alvina/Fusiform/Mockup_Landing1_L_2.png" alt="">
+                        </div>
+                        <!-- folio-image -->
+                    </div></a>
+                    <!-- /folio-style -->
+                </div>
+                <!-- /folio-item -->
+
+                <div class="folio-item web video">
+                  <a href="folio_digital_gt.html">
+                    <div class="folio-style-1">
+                        <div class="folio-image">
+                            <img src="images/Alvina/GT/GT_Start-78.png" alt="">
+                        </div>
+                        <!-- folio-image -->
+                    </div></a>
+                    <!-- /folio-style -->
+                </div>
+
+                <div class="folio-item web">
+                  <a href="folio_digital_hac.html">
+                        <div class="folio-image">
+                          <div class="folio-style-1 mfp-image">
+                            <img src="images/Alvina/HAC/HAC-13.png" alt="">
+                        </div>
+                        <!-- folio-image -->
+                </div></a>
+                <!-- /folio-item -->
+              </div>
+
+                <div class="folio-item web">
+                  <a href="folio_digital_jhulearning.html">
+                    <div class="folio-style-1 mfp-iframe">
+                        <div class="folio-image">
+                            <img src="images/Alvina/IR/1.png" alt="">
+                        </div>
+                        <!-- folio-image -->
+                    </div></a>
+                    <!-- /folio-style -->
+                </div>
+                <!-- /folio-item -->
+
+                <div class="folio-item web">
+                  <a href="folio_digital_jhudegreeaudit.html">
+                    <div class="folio-style-1 mfp-iframe">
+                        <div class="folio-image">
+                            <img src="images/Alvina/JHU/1-Full.png" alt="">
+                        </div>
+                        <!-- folio-image -->
+                    </div></a>
+                    <!-- /folio-style -->
+                </div>
+                <!-- /folio-item -->
+
+                <div class="folio-item web video">
+                  <a href="folio_digital_tedxjhu.html">
+                    <div class="folio-style-1 mfp-iframe">
+                        <div class="folio-image">
+                            <img src="images/Alvina/TEDxJHU/tedx7.jpg" alt="">
+                        </div>
+                        <!-- folio-image -->
+                    </div></a>
+                    <!-- /folio-style -->
+                </div>
+                <!-- /folio-item -->
+
+                <div class="folio-item web">
+                  <a href="folio_digital_ssm.html">
+                    <div class="folio-style-1 mfp-iframe">
+                        <div class="folio-image">
+                            <img src="images/Alvina/SSM/Mockup_SSMFlyer.png" alt="">
+                        </div>
+                        <!-- folio-image -->
+                    </div></a>
+                    <!-- /folio-style -->
+                </div>
+                <!-- /folio-item -->
+
+                <div class="folio-item web">
+                  <a href="folio_digital_oracle.html">
+                    <div class="folio-style-1 mfp-image">
+                        <div class="folio-image">
+                            <img src="images/Alvina/Oracle/frontpageheart.png" alt="">
+                        </div>
+                        <!-- folio-image -->
+                    </div></a>
+                    <!-- /folio-style -->
+                </div>
+                <!-- /folio-item -->
+
+                <div class="folio-item graphic">
+                  <a href="folio_finearts_western.html">
+                    <div class="folio-style-1 mfp-image">
+                        <div class="folio-image">
+                            <img src="images/Alvina/Western/IMG_8410-cropped_2077.jpg" alt="">
+                        </div>
+                        <!-- folio-image -->
+                    </div></a>
+                    <!-- /folio-style -->
+                </div>
+                <!-- /folio-item -->
+
+                <div class="folio-item graphic">
+                  <a href="folio_finearts_cp.html">
+                    <div class="folio-style-1 mfp-image">
+                        <div class="folio-image">
+                            <img src="images/Alvina/Chinese/200flower_o.jpg" alt="">
+                        </div>
+                        <!-- folio-image -->
+                    </div></a>
+                    <!-- /folio-style -->
+                </div>
+                <!-- /folio-item -->
+
+                <div class="folio-item graphic">
+                  <a href="folio_finearts_cc.html">
+                    <div class="folio-style-1 mfp-image">
+                        <div class="folio-image">
+                            <img src="images/Alvina/Chinese/clthumb.jpg" alt="">
+                        </div>
+                        <!-- folio-image -->
+                    </div></a>
+                    <!-- /folio-style -->
+                </div>
+                <!-- /folio-item -->
+
+            </div>
+            <!--/ portfolio -->
+        </div>
+        <!-- /container -->
+    </section>
+    <!-- /portfolio -->
+
 
 
 
