Parallax fix, New Play Page, Header + Navbar Color Alterations
Parallax-mobile class fixes parallax display on mobile screens, so
parallax can still function on desktop. Added playground page to
display codepens. Made headers and navbar more easily visible.

--- a/folio_digital_fusiform.html
+++ b/folio_digital_fusiform.html
@@ -98,6 +98,8 @@
                                   <li><a href="folio_finearts_cc.html">Chinese Calligraphy</a></li>
                             </ul>
                         </li>
+                        <li><a href="play.html">Playground</i></a>
+                        </li>
 
                     </ul>
                     <!-- /nav -->
@@ -122,7 +124,7 @@
         </section> -->
 
 
-    <section class="header header-md parallax parallax-overlay-light" style="background-image:url(images/Alvina/Fusiform/IMG_8049-2.jpg)">
+    <section class="header header-md parallax parallax-mobile parallax-overlay-light no-border" style="background-image:url(images/Alvina/Fusiform/IMG_8049-2.jpg)">
             <div class="container text-center">
                 <div class="text-center pdd-btm-30 mrg-top-30">
                     <h4 class="hero-heading inline-block border border-dark thick-md pdd-vertical-30 pdd-horizon-30"><b>Fusiform, Inc.</b></h4>
@@ -174,7 +176,7 @@
 
 
 <!-- More About -->
-<section id="more-about" class="section parallax no-border" style="background-image: url(images/Alvina/Fusiform/MockupCAST2.png)">
+<section id="more-about" class="section parallax parallax-mobile no-border" style="background-image: url(images/Alvina/Fusiform/MockupCAST2.png)">
     <div class="container">
         <div class="row">
             <div class="col-md-6 bg-white">
@@ -197,7 +199,7 @@
 <!-- /More About -->
 
 <!-- More About -->
-<section id="more-about" class="section parallax no-border" style="background-image: url(images/Alvina/Fusiform/MockupOrder2.png)">
+<section id="more-about" class="section parallax parallax-mobile no-border" style="background-image: url(images/Alvina/Fusiform/MockupOrder2.png)">
     <div class="container">
         <div class="row">
             <div class="col-md-6 bg-white">
@@ -218,7 +220,7 @@
 <!-- /More About -->
 
 <!-- More About -->
-<section id="more-about" class="section parallax no-border" style="background-image: url(images/Alvina/Fusiform/MockupScan2.png)">
+<section id="more-about" class="section parallax parallax-mobile no-border" style="background-image: url(images/Alvina/Fusiform/MockupScan2.png)">
     <div class="container">
         <div class="row">
             <div class="col-md-6 bg-white">
