--- a/folio_digital_jhudegreeaudit.html
+++ b/folio_digital_jhudegreeaudit.html
@@ -98,6 +98,8 @@
                                   <li><a href="folio_finearts_cc.html">Chinese Calligraphy</a></li>
                             </ul>
                         </li>
+                        <li><a href="play.html">Playground</i></a>
+                        </li>
 
                     </ul>
                     <!-- /nav -->
