--- a/folio_digital_ssm.html
+++ b/folio_digital_ssm.html
@@ -98,6 +98,8 @@
                                   <li><a href="folio_finearts_cc.html">Chinese Calligraphy</a></li>
                             </ul>
                         </li>
+                        <li><a href="play.html">Playground</i></a>
+                        </li>
 
                     </ul>
                     <!-- /nav -->
@@ -122,10 +124,10 @@
         </section> -->
 
 
-    <section class="header header-md parallax parallax-overlay-dark no-border" style="background-image:url(images/Alvina/SSM/Mockup_SSMFlyer.png)">
+    <section class="header header-md parallax parallax-mobile parallax-overlay-light no-border" style="background-image:url(images/Alvina/unsplash6.jpeg)">
             <div class="container text-center">
                 <div class="text-center pdd-btm-30 mrg-top-30">
-                    <h4 class="hero-heading inline-block border border-light thick-md pdd-vertical-30 pdd-horizon-30"><b>Stepping Stone Ministry</b></h4>
+                    <h4 class="hero-heading inline-block border border-dark thick-md pdd-vertical-30 pdd-horizon-30"><b>Stepping Stone Ministry</b></h4>
                     <h3 class="">Logo & Publicity</h3>
                     <!-- <h5 class="mrg-top-30">LEAD UX & UI DESIGN</h5> -->
                     <h4 class="heading-alt-style mrg-top-20">2015 - 2016</h4>
@@ -151,7 +153,7 @@
                 </div>
             </section>
 
-<section class="section parallax no-border" style="background-image: url(images/Alvina/SSM/2.png)">
+<section class="section parallax parallax-mobile no-border" style="background-image: url(images/Alvina/SSM/2.png)">
   <div class="container">
     <div class="row">
       <div class="caption-center text-light">
