--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                                   <li><a href="folio_finearts_cp.html">Chinese Painting</a></li>
                                   <li><a href="folio_finearts_cc.html">Chinese Calligraphy</a></li>
                             </ul>
+                        </li><li><a href="play.html">Playground</i></a>
                         </li>
                     </ul>
                     <!-- /nav -->
@@ -113,7 +114,7 @@
     <header id="home">
         <div class="fs-slider">
             <div id="fs-slider-nav" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner bg parallax" style="background-image:url(images/Alvina/02cover-small.png);">
+                <div class="carousel-inner bg parallax parallax-mobile" style="background-image:url(images/Alvina/02cover-small.png);">
 
                     <div class="active item">
                         <div class="hero-caption caption-center caption-height-center">
@@ -683,6 +684,13 @@
     </section>
     <!-- /portfolio -->
 
+
+    <section class="section bg parallax parallax-mobile" style="background-image:url(images/Alvina/02cover-small.png)">
+      <div class="container">
+          <a href="play.html"><h2 class="hero-heading" style="text-align:center; margin-top:-40px; color:white;">Check Out My Playground<i class="ti-arrow-right" style="margin-left:10px;font-weight:bold;margin-top:20px;"></i></h2></a>
+          <!-- <p class="sub-heading">Filter by Category</p> -->
+      </div>
+    </section>
 
 
 
