--- a/play.html
+++ b/play.html
@@ -124,162 +124,76 @@
         </section> -->
 
 
-    <section class="header header-md parallax parallax-mobile parallax-overlay-light" style="background-image:url(images/Alvina/Chinese/background.jpg)">
+    <section class="header header-md parallax  parallax-mobile parallax-overlay-light no-border" style="background-image:url(images/Alvina/04.png)">
             <div class="container text-center">
                 <div class="text-center pdd-btm-30 mrg-top-30">
-                    <h4 class="hero-heading inline-block border border-dark thick-md pdd-vertical-30 pdd-horizon-30"><b>Chinese Calligraphy</b></h4>
+                    <h4 class="hero-heading inline-block border border-dark thick-md pdd-vertical-30 pdd-horizon-30"><b>The Playground</b></h4>
+                    <h3 class="">Experiments + Learning + Fun</h3>
+                    <!-- <h5 class="mrg-top-30">LEAD UX & UI DESIGN</h5> -->
+                    <h4 class="heading-alt-style mrg-top-20">Always</h4>
                 </div>
                 <!-- /text-center -->
             </div>
             <!-- /container -->
         </section>
 
-    <!-- <h2 class="heading mrg-top-70"></h2> -->
-    <p class="mrg-top-70 text-center">
-      <div class="container mrg-top-50">
-        <!-- Images -->
-        <div class="portfolio portfolio-isotope col-3 masonry gutter" style="position: relative; height: 362.188px;">
 
-          <div class="folio-item graphic web" style="position: absolute; left: 234px; top: 0px;">
-            <a href="images/Alvina/Chinese/2011 - gold - calligraphy 1 cropped_o.jpg" class="folio-style-1 lightbox-image mfp-image">
-              <div class="folio-image">
-                <img src="images/Alvina/Chinese/2011 - gold - calligraphy 1 cropped_o.jpg" alt="">
-                <div class="overlay">
-                  <div class="overlay-caption">
-                    <div class="overlay-content">
-                      <div class="folio-info">
-                        <h4 class="folio-tittle">Tsao Shu</h4>
-                        <p class="droid-serif-italic">Gold, 2011 All-American Chinese Brush Painting and Calligraphy Competition, 162'' x 60''</p>
-                        <!-- <p>Chinese calligraphy is evaluated based on accuracy, legibility, control of strokes, and most importantly, aesthetics. This piece is a demonstration of the Tsao Style (also known as Running Style, grass or cursive script in Western translation). It is an abstract and difficult form of writing, and demands the highest level of technique in order to express freedom and strength, but yet remain in conformity with many complex calligraphic rules. This style was developed in the Han Dynasty.</p> -->
+        <!-- <section id="about" class="no-border">
+                <div class="split-box">
+                    <div class="container-fluid">
+                      <div class="col-md-12">
+                        <div class="content">
+                            <h2 class="">HTML/CSS Notification Panel</h2>
+                            <!-- <p class="sub-heading-left">Objective</p> -
+                            <p>
+                            </p>
+                        </div>
                       </div>
                     </div>
-                  </div>
                 </div>
-              </div>
-            </a>
-          </div>
-          <div class="folio-item graphic web" style="position: absolute; left: 234px; top: 0px;">
-            <a href="images/Alvina/Chinese/2010 - gold - calligraphy_o.jpg" class="folio-style-1 lightbox-image mfp-image">
-              <div class="folio-image">
-                <img src="images/Alvina/Chinese/2010 - gold - calligraphy_o.jpg" alt="">
-                <div class="overlay">
-                  <div class="overlay-caption">
-                    <div class="overlay-content">
-                      <div class="folio-info">
-                        <h4 class="folio-tittle">Xing Shu</h4>
-                        <p class="droid-serif-italic">Gold, 2010 All-American Chinese Brush Painting and Calligraphy Competition, 56'' x 53''</p>
-                        <!-- <p>Xing style, also known as the walking or semi-cursive style between Tsao and Kai. Again, it was established in Han Dynasty but became popular in Tang Dynasty due to the influence of one of Chinese greatest calligraphist, Wang Hsi-Chih.</p> -->
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="folio-item graphic web" style="position: absolute; left: 234px; top: 0px;">
-            <a href="images/Alvina/Chinese/2009 - bronze - calligraphy cropped_o.jpg" class="folio-style-1 lightbox-image mfp-image">
-              <div class="folio-image">
-                <img src="images/Alvina/Chinese/2009 - bronze - calligraphy cropped_o.jpg" alt="">
-                <div class="overlay">
-                  <div class="overlay-caption">
-                    <div class="overlay-content">
-                      <div class="folio-info">
-                        <h4 class="folio-tittle">Xing Shu</h4>
-                        <p class="droid-serif-italic">Bronze, 2009 All-American Chinese Brush Painting and Calligraphy Competition</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="folio-item graphic web" style="position: absolute; left: 234px; top: 0px;">
-            <a href="images/Alvina/Chinese/2008 - silver - calligraphy.jpg" class="folio-style-1 lightbox-image mfp-image">
-              <div class="folio-image">
-                <img src="images/Alvina/Chinese/2008 - silver - calligraphy.jpg" alt="">
-                <div class="overlay">
-                  <div class="overlay-caption">
-                    <div class="overlay-content">
-                      <div class="folio-info">
-                        <h4 class="folio-tittle">Duo Panels</h4>
-                        <p class="droid-serif-italic">Silver, 2008 All-American Chinese Brush Painting and Calligraphy Competition</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
+            </section> -->
+
+<section class="section parallax no-border" style="margin-top:-60px;">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <h2 style="text-align:center">HTML/CSS Notification Panel
+        <br><br><img src="images/Alvina/notif2.gif" alt=""></h2>
+
+        <!-- <p class="hero-text text-light font-size-20 ls-5 text-center">Main Event, March 2016</p> -->
+        <!-- <h2 class="hero-heading text-light text-xform-none text-center"><b>HTML/CSS Notification Panel</b></h2> -->
+        <!-- <p class="hero-text-alt text-dark ls-8 text-uppercase mrg-top-30 text-center">Unique / Trendy / Stylish</p> -->
+        <br><br><br><br>
+    </div>
+  </div>
+</section>
+<!--
+<section id="about" class="no-border">
+  <div class="split-box">
+      <div class="container-fluid">
+        <div class="col-md-12">
+          <div class="content">
+              <h2 class="">Logo Design Process</h2>
+              <!-- <p class="sub-heading-left">Objective</p> -
+              <p>
+              </p>
           </div>
         </div>
       </div>
-    </p>
-
-<br><br><br><br>
-
-<h2 class="mrg-top-70 mrg-btm-20" style="text-align:center;">Related Work</h2>
-<div class="col-sm-12 col-sm-offset-3 mrg-top-30 mrg-btm-20">
-  <div class="portfolio portfolio-isotope col-4 gutter" style="position: relative; height: 290px;">
-    <!-- Images -->
-    <div class="folio-item" style="position: absolute; left: 0px; top: 0px;">
-      <a href="folio_finearts_western.html" class="folio-style-1 ">
-        <div class="folio-image">
-          <img src="images/Alvina/Western/square.jpg" alt="">
-          <div class="overlay">
-            <div class="overlay-caption">
-              <div class="overlay-content">
-                <div class="folio-info">
-                  <h4 class="folio-tittle">Western</h4>
-                  <!-- <p class="droid-serif-italic">Web, Branding</p> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="folio-item" style="position: absolute; left: 380px; top: 0px;">
-      <a href="folio_finearts_cp.html" class="folio-style-1 ">
-        <div class="folio-image">
-          <img src="images/Alvina/Chinese/cpsquare.jpg" alt="">
-          <div class="overlay">
-            <div class="overlay-caption">
-              <div class="overlay-content">
-                <div class="folio-info">
-                  <h4 class="folio-tittle">Chinese Painting</h4>
-                  <!-- <p class="droid-serif-italic">Web, Branding</p> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
   </div>
-</div>
-
-
-
-<!-- Nav -->
-<section id="portfolio-single-btm" class="pdd-vertical-30">
-<div class="container">
-  <div class="col-xs-4">
-    <a href="folio_finearts_cp.html" class="text-left">
-      <h5 class="mrg-top-15"><i class="ti-arrow-left pdd-right-10 font-size-10"></i> Previous</h5>
-    </a>
-  </div>
-  <div class="col-xs-4">
-    <a href="index.html" class="text-center">
-      <h2 class="mrg-vertical-10"><i class="ti-view-grid pdd-right-5"></i></h2>
-    </a>
-  </div>
-  <div class="col-xs-4">
-    <a href="folio_finearts_western.html" class="text-right">
-      <h5 class="mrg-top-15">Next <i class="ti-arrow-right pdd-left-10 font-size-10"></i></h5>
-    </a>
-  </div>
-</div>
 </section>
 
+<section class="section parallax no-border" style="background-image: url(images/Alvina/SSM/process.png)">
+  <div class="container">
+    <div class="row">
+      <div class="caption-center text-light">
+        <!-- <p class="hero-text text-light font-size-20 ls-5 text-center">Main Event, March 2016</p> -->
+        <!-- <h2 class="hero-heading text-light text-xform-none text-center"><b>*Instructions Not Included</b></h2> -->
+        <!-- <p class="hero-text-alt text-light ls-8 text-uppercase mrg-top-30 text-center">Unique / Trendy / Stylish</p> -
+        <br><br><br><br><br><br><br><br><br><br><br><br>
+      </div>
+    </div>
+  </section> -->
 
 
 <footer>
