--- a/folio_digital_jhulearning.html
+++ b/folio_digital_jhulearning.html
@@ -98,6 +98,8 @@
                                   <li><a href="folio_finearts_cc.html">Chinese Calligraphy</a></li>
                             </ul>
                         </li>
+                        <li><a href="play.html">Playground</i></a>
+                        </li>
 
                     </ul>
                     <!-- /nav -->
@@ -122,7 +124,7 @@
         </section> -->
 
 
-    <section class="header header-md parallax parallax-overlay-dark" style="background-image:url(images/Alvina/IR/jhu1.jpg)">
+    <section class="header header-md parallax parallax-mobile parallax-overlay-dark" style="background-image:url(images/Alvina/IR/jhu1.jpg)">
             <div class="container text-center">
                 <div class="text-center pdd-btm-30 mrg-top-30">
                     <h4 class="hero-heading inline-block border border-light thick-md pdd-vertical-30 pdd-horizon-30"><b>Perceived Cognition & Tools for Synthesis</b></h4>
