--- a/folio_digital_tedxjhu.html
+++ b/folio_digital_tedxjhu.html
@@ -98,6 +98,8 @@
                                   <li><a href="folio_finearts_cc.html">Chinese Calligraphy</a></li>
                             </ul>
                         </li>
+                        <li><a href="play.html">Playground</i></a>
+                        </li>
 
                     </ul>
                     <!-- /nav -->
@@ -122,7 +124,7 @@
         </section> -->
 
 
-    <section class="header header-md parallax parallax-overlay-dark no-border" style="background-image:url(images/Alvina/TEDxJHU/tedx7.jpg)">
+    <section class="header header-md parallax parallax-mobile parallax-overlay-dark no-border" style="background-image:url(images/Alvina/TEDxJHU/tedx7.jpg)">
             <div class="container text-center">
                 <div class="text-center  mrg-top-0">
                     <h4 class="hero-heading inline-block border border-light thick-md pdd-vertical-30 pdd-horizon-30"><b>TEDxJHU</b></h4>
@@ -137,8 +139,8 @@
 
 
     <!-- Video Parallax -->
-    <section class="video-parallax no-border parallax-overlay-dark mobile-hide" style="height:700px;">
-        <div class="video-player" data-property="{videoURL:'https://youtu.be/tQz4kZ_2wc0',containment:'.video-parallax',autoPlay:true, mute:true, loop:false, showControls:true, startAt:0, opacity:1}">Youtube video</div>
+    <section class="video-parallax no-border  parallax-mobile parallax-overlay-dark mobile-hide" style="height:700px;">
+        <div class="video-player" data-property="{videoURL:'https://youtu.be/tQz4kZ_2wc0',containment:'.video-parallax',autoPlay:true, mute:true, loop:false, showControls:true, startAt:0, opacity:1}"></div>
 
         <div class="container text-left mrg-btm-50" style="margin-left:20px;margin-top:12px;">
             <!-- <i class="play-btn font-size-60"></i> -->
@@ -150,7 +152,7 @@
     </section>
     <!-- /Video Parallax -->
 
-    <section class="section parallax no-border parallax-overlay-dark" style="background-image: url(images/Alvina/TEDxJHU/Main2016/INI4_Banner.png)">
+    <section class="section parallax parallax-mobile no-border parallax-overlay-dark" style="background-image: url(images/Alvina/TEDxJHU/Main2016/INI4_Banner.png)">
       <div class="container">
         <div class="row">
           <div class="caption-center text-light">
@@ -164,7 +166,7 @@
 
 
 
-    <section id="more-about" class="section parallax no-border" style="background-image: url(images/Alvina/TEDxJHU/Main2016/INI4_Banner.png)">
+    <section id="more-about" class="section parallax parallax-mobile no-border" style="background-image: url(images/Alvina/TEDxJHU/Main2016/INI4_Banner.png)">
         <div class="container mrg-btm-50">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 bg-white">
