Timeline gif in play page

--- a/play.html
+++ b/play.html
@@ -164,6 +164,9 @@
         <!-- <h2 class="hero-heading text-light text-xform-none text-center"><b>HTML/CSS Notification Panel</b></h2> -->
         <!-- <p class="hero-text-alt text-dark ls-8 text-uppercase mrg-top-30 text-center">Unique / Trendy / Stylish</p> -->
         <br><br><br><br>
+
+        <h2 style="text-align:center">HTML/CSS Responsive Timeline
+        <br><br><img src="images/Alvina/timeline.gif" alt="" style="margin-left:-115px;"></h2>
     </div>
   </div>
 </section>
